--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx --env-file=.env index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,8 @@
     "@prisma/client": "^5.17.0",
     "discord.js": "^14.15.3",
     "envalid": "^8.0.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "redis": "^4.6.15"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
