--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "tsx --env-file=.env index.ts"
+    "dev": "tsx --env-file=.env index.ts",
+    "build": "tsc && ts-add-js-extension --dir=dist",
+    "deploy": "prisma generate && prisma db push",
+    "preview": "node --env-file=.env dist/index.js",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +19,14 @@
     "discord.js": "^14.15.3",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
-    "redis": "^4.6.15"
+    "redis": "^4.6.15",
+    "ts-add-js-extension": "^1.6.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/node": "^20.14.11",
     "prettier": "^3.3.3",
+    "prisma": "^5.17.0",
     "typescript": "^5.5.3"
   }
 }
