--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "tsx --env-file=.env index.ts",
     "build": "tsc && ts-add-js-extension --dir=dist",
-    "deploy": "prisma generate && prisma db push",
+    "migrate": "prisma generate && prisma migrate deploy",
     "preview": "node --env-file=.env dist/index.js",
     "start": "node dist/index.js"
   },
